--- a/index.html
+++ b/index.html
@@ -143,10 +143,8 @@ font-size: 2rem;
 <div class="subtitle">Ph.D. Student in Computer Science</div>
 <div class="subtitle">University of Queensland</div>
 <div class="contact-links">
-<a href="mailto:your.email@uq.edu.au"><i class="fas fa-envelope"></i></a>
-<a href="https://github.com/yourusername"><i class="fab fa-github"></i></a>
-<a href="https://linkedin.com/in/yourusername"><i class="fab fa-linkedin"></i></a>
-<a href="https://scholar.google.com/citations?user=yourid"><i class="fas fa-graduation-cap"></i></a>
+<a href="mailto:a.kazemi@uq.edu.au"><i class="fas fa-envelope"></i></a>
+<a href="https://www.linkedin.com/in/alizkzm/"><i class="fab fa-linkedin"></i></a>
 </div>
 </header>
 
@@ -155,6 +153,7 @@ font-size: 2rem;
 <div class="content">
 <p>I am a first-year Ph.D. student of Computer Science at the University of Queensland, advised by Dr. Mahsa Baktashmotlagh. My research focuses on transferability and generalization of ML models. Prior to joining UQ, I completed my Master's degree in Computer Engineering and Bachelor's degree in Electrical Engineering from Sharif University of Technology.</p>
 <p>I also bring industry experience, having worked for over 3 years in the data science department of Tapsi, one of Iran's leading ride-hailing companies.</p>
+<p></p>
 </div>
 </section>
 
