--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@ font-size: 2rem;
 <body>
 <div class="container">
 <header>
-<img src="https://via.placeholder.com/200" alt="Alireza KAZEMI" class="profile-img">
+<img src="kazi.jpg" alt="Alireza KAZEMI" class="profile-img">
 <h1>Alireza KAZEMI</h1>
 <div class="subtitle">Ph.D. Student in Computer Science</div>
-<div class="subtitle">University of Queensland</div>
+<div class="subtitle">The University of Queensland</div>
 <div class="contact-links">
 <a href="mailto:a.kazemi@uq.edu.au"><i class="fas fa-envelope"></i></a>
 <a href="https://www.linkedin.com/in/alizkzm/"><i class="fab fa-linkedin"></i></a>
