--- a/index.html
+++ b/index.html
@@ -157,33 +157,38 @@ font-size: 2rem;
 </div>
 </section>
 
-<section class="section">
-<h2>Education</h2>
-<div class="education-item">
-<h3>Ph.D. in Computer Science</h3>
-<div>University of Queensland</div>
-<div class="period">2023 - Present</div>
-<div>Advisor: Dr. Mahsa Baktashmotlagh</div>
-</div>
-<div class="education-item">
-<h3>M.Sc. in Computer Engineering</h3>
-<div>Sharif University of Technology</div>
-<div class="period">Graduation Year</div>
-</div>
-<div class="education-item">
-<h3>B.Sc. in Electrical Engineering</h3>
-<div>Sharif University of Technology</div>
-<div class="period">Graduation Year</div>
-</div>
-</section>
 
 <section class="section">
-<h2>Professional Experience</h2>
+<h2>Industrial Experience</h2>
 <div class="experience-item">
-<h3>Data Scientist</h3>
+<h3>Business Data Analytics Expert</h3>
 <div>Tapsi</div>
 <div class="period">3+ Years</div>
-<p>Worked in the data science department of one of Iran's leading ride-hailing companies.</p>
+<p> June 2021 - Sep 2024</p>
+<p> Tapsi holds the distinction of being the initial startup in Iran to go public. I started my role as a data analyst
+within the marketplace team. I specialized in harnessing advanced data analytics to drive product innovation
+within the Matching, Map, and Delivery domains. My technical proficiency in SQL, Python, and statistics,
+combined with a deep understanding of large datasets processed, enables me to extract critical insights and
+foster data-driven decision-making.
+</p>
+<p></p>
+<p>Key Responsibilities:</p>
+
+<ul>
+  <li> Designing and enhancing experimentation (A/B Testing) frameworks to optimize product features and
+user experience, incorporating variance reduction techniques to ensure data integrity and reliability, and
+using different causal methods to tracing causal paths.
+</li>
+  <li>Development and utilization of predictive Machine Learning models using data science libraries</li>
+  <li> Analyze large volumes of complex data using SQL and PySpark, on top of Spark to manage and
+process data efficiently.</li>
+  <li>Develop and refine data visualization dashboards in Tableau, presenting actionable insights to inform
+strategic planning and facilitate business-critical decisions.
+</li>
+  <li>Engineering ETL processes for data processing and scheduling them efficiently using Apache Airflow.</li>
+</ul>
+
+  
 </div>
 </section>
 
