--- a/index.html
+++ b/index.html
@@ -151,54 +151,19 @@ font-size: 2rem;
 <section class="section">
 <h2>About Me</h2>
 <div class="content">
-<p>I am a first-year Ph.D. student of Computer Science at the University of Queensland, advised by Dr. Mahsa Baktashmotlagh. My research focuses on transferability and generalization of ML models. Prior to joining UQ, I completed my Master's degree in Computer Engineering and Bachelor's degree in Electrical Engineering from Sharif University of Technology.</p>
-<p>I also bring industry experience, having worked for over 3 years in the data science department of Tapsi, one of Iran's leading ride-hailing companies.</p>
-<p></p>
-</div>
-</section>
-
-
-<section class="section">
-<h2>Industrial Experience</h2>
-<div class="experience-item">
-<h3>Business Data Analytics Expert</h3>
-<div>Tapsi</div>
-<div class="period">3+ Years</div>
-<p> June 2021 - Sep 2024</p>
-<p> Tapsi holds the distinction of being the initial startup in Iran to go public. I started my role as a data analyst
-within the marketplace team. I specialized in harnessing advanced data analytics to drive product innovation
-within the Matching, Map, and Delivery domains. My technical proficiency in SQL, Python, and statistics,
-combined with a deep understanding of large datasets processed, enables me to extract critical insights and
-foster data-driven decision-making.
+<p> I am a first-year Ph.D. student (2024) in Computer Science at the University of Queensland, advised by Dr. Mahsa Baktashmotlagh. My research focuses on the transferability and generalization of machine learning models. Before joining UQ, I earned a Master's degree in Computer Engineering and a Bachelor's degree in Electrical Engineering from Sharif University of Technology. With over three years of experience in the data science department at Tapsi, one of Iran's leading ride-hailing companies, I have applied my expertise in real-world business settings. I am passionate about advancing the field of machine learning and its practical applications.
 </p>
-<p></p>
-<p>Key Responsibilities:</p>
-
-<ul>
-  <li> Designing and enhancing experimentation (A/B Testing) frameworks to optimize product features and
-user experience, incorporating variance reduction techniques to ensure data integrity and reliability, and
-using different causal methods to tracing causal paths.
-</li>
-  <li>Development and utilization of predictive Machine Learning models using data science libraries</li>
-  <li> Analyze large volumes of complex data using SQL and PySpark, on top of Spark to manage and
-process data efficiently.</li>
-  <li>Develop and refine data visualization dashboards in Tableau, presenting actionable insights to inform
-strategic planning and facilitate business-critical decisions.
-</li>
-  <li>Engineering ETL processes for data processing and scheduling them efficiently using Apache Airflow.</li>
-</ul>
-
-  
 </div>
 </section>
 
+
+
 <section class="section">
-<h2>Research Interests</h2>
+<h2>Interests</h2>
 <ul class="research-interests">
 <li>Machine Learning Model Transferability</li>
 <li>Generalization in Machine Learning</li>
-<li>Deep Learning</li>
-<li>Computer Vision</li>
+<li>Business Data Analytics </li>
 </ul>
 </section>
 </div>
