--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ font-size: 2rem;
 <section class="section">
 <h2>About Me</h2>
 <div class="content">
-<p> I am a first-year Ph.D. student (2024) in Computer Science at the University of Queensland, advised by Dr. Mahsa Baktashmotlagh. My research focuses on the transferability and generalization of machine learning models. Before joining UQ, I earned a Master's degree in Computer Engineering and a Bachelor's degree in Electrical Engineering from Sharif University of Technology. With over three years of experience in the data science department at Tapsi, one of Iran's leading ride-hailing companies, I have applied my expertise in real-world business settings. I am passionate about advancing the field of machine learning and its practical applications.
+<p> I am a first-year Ph.D. student (2024) in Computer Science at the <a href="https://www.uq.edu.au/">University of Queensland</a>, advised by Dr. Mahsa Baktashmotlagh. My research focuses on the transferability and generalization of ML models. Before joining UQ, I earned a Master's degree in Computer Engineering and a Bachelor's degree in Electrical Engineering from <a href="https://en.sharif.ir/">Sharif University of Technology</a>. With over three years of experience in the data science department at <a href="https://tapsi.ir/">Tapsi</a>, one of Iran's leading ride-hailing companies, I have applied my expertise in real-world business settings. I am passionate about advancing the field of ML and its practical applications.
 </p>
 </div>
 </section>
@@ -159,11 +159,9 @@ font-size: 2rem;
 
 
 <section class="section">
-<h2>Interests</h2>
+<h2>Australia</h2>
 <ul class="research-interests">
-<li>Machine Learning Model Transferability</li>
-<li>Generalization in Machine Learning</li>
-<li>Business Data Analytics </li>
+
 </ul>
 </section>
 </div>
