--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ font-size: 2rem;
 <img src="kazi.jpg" alt="Alireza KAZEMI" class="profile-img">
 <h1>Alireza KAZEMI</h1>
 <div class="subtitle">Ph.D. Student in Computer Science</div>
-<div class="subtitle">The University of Queensland</div>
+<div class="subtitle">The University of Queensland, Brisbane, Australia</div>
 <div class="contact-links">
 <a href="mailto:a.kazemi@uq.edu.au"><i class="fas fa-envelope"></i></a>
 <a href="https://www.linkedin.com/in/alizkzm/"><i class="fab fa-linkedin"></i></a>
