--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ font-size: 2rem;
 <div class="subtitle">Ph.D. Student in Computer Science</div>
 <div class="subtitle">The University of Queensland, Brisbane, Australia</div>
 <div class="contact-links">
+<a href="mailto:alirezakazemi.kzm@gmail.com"><i class="fab fa-google"></i></a>
 <a href="mailto:a.kazemi@uq.edu.au"><i class="fas fa-envelope"></i></a>
 <a href="https://www.linkedin.com/in/alizkzm/"><i class="fab fa-linkedin"></i></a>
 </div>
