--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ font-size: 2rem;
 </header>
 
 <section class="section">
-<h2>About Me</h2>
+<h2>Summary</h2>
 <div class="content">
 <p> I am a first-year Ph.D. student (2024) in Computer Science at the <a href="https://www.uq.edu.au/">University of Queensland</a>. My research focuses on the transferability and generalization of ML models. Before joining UQ, I earned a Master's degree in Computer Engineering (2021-2024) and a Bachelor's degree in Electrical Engineering (2016-2021) from <a href="https://en.sharif.ir/">Sharif University of Technology</a>. With over three years of experience (2021-2024) as business data analyst in the data science department at <a href="https://tapsi.ir/">Tapsi</a>, one of Iran's leading ride-hailing companies, I have applied my expertise in real-world business settings.
 </p>
