--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ font-size: 2rem;
 
 <section class="section">
 <h2>Undergraduate</h2>
-<div class="Undergraduate">
+<div class="content">
 <p> My undergraduate studies blended electrical engineering principles with biomedical applications and interdisciplinary knowledge. I explored biological sciences through courses such as Computational Neuroscience, Systems Biology, Bioinformatics, which deepened my understanding of complex biological systems. Concurrently, I developed strong data analysis and programming skills through coursework in Machine Learning, Deep Learning, Computational Intelligence, Causal Inference, and Advanced Programming, along with hands-on experience in advanced coding techniques. Additionally, courses like Fundamentals of Economics and Project Control provided valuable insights into resource management, planning, and decision-making in technology-driven projects. This diverse education equipped me to address challenges at the intersection of engineering, biology, and data science, with both technical expertise and strategic thinking.
 </p>
 </div>
