--- a/index.html
+++ b/index.html
@@ -158,16 +158,22 @@ font-size: 2rem;
 </section>
 
 <section class="section">
-<h2>Undergraduate</h2>
+<h2>Education</h2>
 <div class="content">
 <p> My undergraduate studies blended electrical engineering principles with biomedical applications and interdisciplinary knowledge. I explored biological sciences through courses such as Computational Neuroscience, Systems Biology, Bioinformatics, which deepened my understanding of complex biological systems. Concurrently, I developed strong data analysis and programming skills through coursework in Machine Learning, Deep Learning, Computational Intelligence, Causal Inference, and Advanced Programming, along with hands-on experience in advanced coding techniques. Additionally, courses like Fundamentals of Economics and Project Control provided valuable insights into resource management, planning, and decision-making in technology-driven projects. This diverse education equipped me to address challenges at the intersection of engineering, biology, and data science, with both technical expertise and strategic thinking.
+</p>
+<br>
+<p>
+During my master’s program, I specialized in Artificial Intelligence, with coursework in Advanced AI, Statistical Learning, Pattern Recognition, and Neural Networks. My thesis, Enhancing Variance Reduction Methods in Randomized Experiments, focused on improving experimental design and analysis techniques, contributing to more accurate and efficient statistical inference.
+<br>
+<p> In my PhD research I am concentrating on enhancing the robustness and generalizability of ML models, which is crucial for ensuring that these models perform reliably across a variety of untested scenarios.
 </p>
 </div>
 </section>
 
 
 <section class="section">
-<h2>Summary</h2>
+<h2>Graduate</h2>
 <div class="content">
 <p> I am a first-year Ph.D. student (2024) in Computer Science at the <a href="https://www.uq.edu.au/">University of Queensland</a>. My research focuses on the transferability and generalization of ML models. Before joining UQ, I earned a Master's degree in Computer Engineering (2021-2024) and a Bachelor's degree in Electrical Engineering (2016-2021) from <a href="https://en.sharif.ir/">Sharif University of Technology</a>. With over three years of experience (2021-2024) as business data analyst in the data science department at <a href="https://tapsi.ir/">Tapsi</a>, one of Iran's leading ride-hailing companies, I have applied my expertise in real-world business settings.
 </p>
