--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ font-size: 2rem;
 <p>
 During my master’s program, I specialized in Artificial Intelligence, with coursework in Advanced AI, Statistical Learning, Pattern Recognition, and Neural Networks. My thesis, Enhancing Variance Reduction Methods in Randomized Experiments, focused on improving experimental design and analysis techniques, contributing to more accurate and efficient statistical inference.
 <br>
-<p> In my PhD research I am concentrating on enhancing the robustness and generalizability of ML models, which is crucial for ensuring that these models perform reliably across a variety of untested scenarios.
+<p> In my PhD research I am concentrating on enhancing the robustness and generalizability of statistical models, which is crucial for ensuring that these models perform reliably across a variety of untested scenarios.
 </p>
 </div>
 </section>
