--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@ During my master’s program, I specialized in Artificial Intelligence, with cou
 
 
 <section class="section">
-<h2>Graduate</h2>
+<h2>Experience</h2>
 <div class="content">
-<p> I am a first-year Ph.D. student (2024) in Computer Science at the <a href="https://www.uq.edu.au/">University of Queensland</a>. My research focuses on the transferability and generalization of ML models. Before joining UQ, I earned a Master's degree in Computer Engineering (2021-2024) and a Bachelor's degree in Electrical Engineering (2016-2021) from <a href="https://en.sharif.ir/">Sharif University of Technology</a>. With over three years of experience (2021-2024) as business data analyst in the data science department at <a href="https://tapsi.ir/">Tapsi</a>, one of Iran's leading ride-hailing companies, I have applied my expertise in real-world business settings.
+<p> In my role as a Business Data Analyst, I contributed over three years to driving product innovation across Matching, Map, and Delivery domains. Leveraging advanced data analytics and technical skills in SQL, Python, and statistics, I extracted actionable insights from large datasets to enable data-driven decision-making. Key accomplishments include designing robust A/B testing frameworks with variance reduction techniques, applying causal inference methods, developing machine learning models, creating ETL pipelines with Apache Airflow, and building interactive dashboards in Tableau to support strategic decisions. My expertise in managing and analyzing big data using PySpark streamlined processes and optimized performance.
 </p>
 </div>
 </section>
