--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@ During my master’s program, I specialized in Artificial Intelligence, with cou
 <div class="content">
 <p> In my role as a Business Data Analyst, I contributed over three years to driving product innovation across Matching, Map, and Delivery domains. Leveraging advanced data analytics and technical skills in SQL, Python, and statistics, I extracted actionable insights from large datasets to enable data-driven decision-making. Key accomplishments include designing robust A/B testing frameworks with variance reduction techniques, applying causal inference methods, developing machine learning models, creating ETL pipelines with Apache Airflow, and building interactive dashboards in Tableau to support strategic decisions. My expertise in managing and analyzing big data using PySpark streamlined processes and optimized performance.
 </p>
+<br>
+<p>
+I have a teaching background across various institutions, where I’ve focused on bridging theoretical concepts with practical applications. At <a href = "https://become.expert/">Becomexpert</a>, I led a 25-hour internship program, guiding students through real-world data science projects. I involved in teaching a graduate course in Pattern Recognition, and undergraduate courses such as Advanced Programming in Java and Numerical Methods. 
+</p>
 </div>
 </section>
 
