--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ During my master’s program, I specialized in Artificial Intelligence, with cou
 <section class="section">
 <h2>Experience</h2>
 <div class="content">
-<p> In my role as a Business Data Analyst, I contributed over three years to driving product innovation across Matching, Map, and Delivery domains. Leveraging advanced data analytics and technical skills in SQL, Python, and statistics, I extracted actionable insights from large datasets to enable data-driven decision-making. Key accomplishments include designing robust A/B testing frameworks with variance reduction techniques, applying causal inference methods, developing machine learning models, creating ETL pipelines with Apache Airflow, and building interactive dashboards in Tableau to support strategic decisions. My expertise in managing and analyzing big data using PySpark streamlined processes and optimized performance.
+<p> In my role as a Business Data Analyst, I contributed over three years to driving product innovation across Matching, Map, and Delivery teams at Tapsi Leveraging advanced data analytics and technical skills in SQL, Python, and statistics, I extracted actionable insights from large datasets to enable data-driven decision-making. Key accomplishments include designing robust A/B testing frameworks with variance reduction techniques, applying causal inference methods, developing machine learning models, creating ETL pipelines with Apache Airflow, and building interactive dashboards in Tableau to support strategic decisions. My expertise in managing and analyzing big data using PySpark streamlined processes and optimized performance.
 </p>
 <br>
 <p>
